@@ -113,23 +113,6 @@
           </packing>
         </child>
         <child>
-          <widget class="GtkCheckButton" id="checkbutton_persist">
-            <property name="width_request">300</property>
-            <property name="height_request">32</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-            <property name="tooltip" translatable="yes">save system changes to usb</property>
-            <property name="label" translatable="yes">persist</property>
-            <property name="response_id">0</property>
-            <property name="draw_indicator">True</property>
-          </widget>
-          <packing>
-            <property name="x">155</property>
-            <property name="y">210</property>
-          </packing>
-        </child>
-        <child>
           <widget class="GtkButton" id="button_install">
             <property name="width_request">150</property>
             <property name="height_request">32</property>
@@ -144,7 +127,7 @@
           </widget>
           <packing>
             <property name="x">305</property>
-            <property name="y">330</property>
+            <property name="y">425</property>
           </packing>
         </child>
         <child>
@@ -161,7 +144,7 @@
             <signal name="clicked" handler="gtk_main_quit"/>
           </widget>
           <packing>
-            <property name="y">330</property>
+            <property name="y">425</property>
           </packing>
         </child>
         <child>
@@ -175,18 +158,141 @@
             <property name="use_markup">True</property>
           </widget>
           <packing>
-            <property name="y">249</property>
+            <property name="y">350</property>
           </packing>
         </child>
         <child>
           <widget class="GtkFileChooserButton" id="filechooserbutton_iso">
-            <property name="width_request">455</property>
+            <property name="width_request">454</property>
             <property name="height_request">32</property>
             <property name="visible">True</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
           </widget>
           <packing>
-            <property name="y">280</property>
+            <property name="y">380</property>
+          </packing>
+        </child>
+        <child>
+          <widget class="GtkFrame" id="frame1">
+            <property name="width_request">456</property>
+            <property name="height_request">92</property>
+            <property name="visible">True</property>
+            <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+            <child>
+              <widget class="GtkAlignment" id="alignment1">
+                <property name="visible">True</property>
+                <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+                <property name="left_padding">12</property>
+                <child>
+                  <widget class="GtkFixed" id="fixed2">
+                    <property name="visible">True</property>
+                    <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+                    <child>
+                      <widget class="GtkCheckButton" id="checkbutton_persist">
+                        <property name="width_request">95</property>
+                        <property name="height_request">32</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+                        <property name="label" translatable="yes">persist</property>
+                        <property name="response_id">0</property>
+                        <property name="draw_indicator">True</property>
+                      </widget>
+                      <packing>
+                        <property name="x">5</property>
+                        <property name="y">5</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkCheckButton" id="checkbutton_toram">
+                        <property name="width_request">95</property>
+                        <property name="height_request">32</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+                        <property name="tooltip" translatable="yes">save system changes to usb</property>
+                        <property name="label" translatable="yes">toram</property>
+                        <property name="response_id">0</property>
+                        <property name="draw_indicator">True</property>
+                      </widget>
+                      <packing>
+                        <property name="x">5</property>
+                        <property name="y">36</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkImage" id="image2">
+                        <property name="width_request">32</property>
+                        <property name="height_request">32</property>
+                        <property name="visible">True</property>
+                        <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+                        <property name="tooltip" translatable="yes">persist=save system changes to usb</property>
+                        <property name="stock">gtk-info</property>
+                      </widget>
+                      <packing>
+                        <property name="x">100</property>
+                        <property name="y">5</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkImage" id="image4">
+                        <property name="width_request">32</property>
+                        <property name="height_request">32</property>
+                        <property name="visible">True</property>
+                        <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+                        <property name="tooltip" translatable="yes">toram=</property>
+                        <property name="stock">gtk-info</property>
+                      </widget>
+                      <packing>
+                        <property name="x">100</property>
+                        <property name="y">36</property>
+                      </packing>
+                    </child>
+                  </widget>
+                </child>
+              </widget>
+            </child>
+            <child>
+              <widget class="GtkLabel" id="label1">
+                <property name="visible">True</property>
+                <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+                <property name="label" translatable="yes">&lt;b&gt;Option&lt;/b&gt;</property>
+                <property name="use_markup">True</property>
+              </widget>
+              <packing>
+                <property name="type">label_item</property>
+              </packing>
+            </child>
+          </widget>
+          <packing>
+            <property name="y">255</property>
+          </packing>
+        </child>
+        <child>
+          <widget class="GtkLabel" id="label_language">
+            <property name="width_request">150</property>
+            <property name="height_request">32</property>
+            <property name="visible">True</property>
+            <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+            <property name="xalign">0</property>
+            <property name="label" translatable="yes">&lt;b&gt;Language&lt;/b&gt;</property>
+            <property name="use_markup">True</property>
+          </widget>
+          <packing>
+            <property name="y">212</property>
+          </packing>
+        </child>
+        <child>
+          <widget class="GtkComboBox" id="combobox_lang">
+            <property name="width_request">300</property>
+            <property name="height_request">32</property>
+            <property name="visible">True</property>
+            <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+            <property name="items" translatable="yes"></property>
+          </widget>
+          <packing>
+            <property name="x">155</property>
+            <property name="y">212</property>
           </packing>
         </child>
       </widget>
