@@ -1,8 +1,14 @@
 install-usb-gui (0.0.8) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 14 Oct 2007 12:54:12 +0200
+  [ Horst Tritremmel ]
+  * languge selection added/frontend
+  * toram option added/frontend
+  * required changes for backend ( .. -- cheatcodes ..)
+
+ -- Horst Tritremmel <hjt@sidux.com>  Sun, 14 Oct 2007 22:04:17 +0200
 
 install-usb-gui (0.0.7) unstable; urgency=low
 
